# newsroom-agent

./: .gitignore  CLAUDE.md  CLAUDE_CODE_GAP.md  Cargo.toml  IDENTITY.md  JOURNAL.md  LEARNINGS.md  PERSONALITY.md  README.md  ROADMAP.md  SESSION_PLAN.md  SOCIAL_LEARNINGS.md
.github/workflows/: evolve.yml  social.yml  synthesize.yml
docs/: index.html
docs/src/usage/: commands.md
guide/src/: SUMMARY.md
guide/src/troubleshooting/: safety.md
guide/src/usage/: commands.md
memory/: active_learnings.md  active_social_learnings.md  learnings.jsonl
scripts/: build_site.py  daily_diary.sh  evolve.sh  evolve_local.sh  format_issues.py  reset_day.sh  social.sh  social_local.sh  synthesize_local.sh  yoyo_context.sh
skills/communicate/: SKILL.md
skills/evolve/: SKILL.md
skills/research/: SKILL.md
skills/self-assess/: SKILL.md
skills/social/: SKILL.md
src/: cli.rs  commands.rs  commands_git.rs  commands_project.rs  commands_research.rs  commands_session.rs  commands_workflow.rs  commands_writing.rs  format.rs  git.rs  main.rs  memory.rs  prompt.rs  repl.rs
tests/: integration.rs
