[package]
name = "yoyo"
version = "0.1.0"
edition = "2021"
description = "A journalist assistant agent that evolves itself (기자업무보조 에이전트). Born as 200 lines of Rust, growing up in public."
license = "MIT"
repository = "https://github.com/yologdev/yoyo-evolve"

[dependencies]
yoagent = { version = "0.7", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rustyline = "15"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
